# PipeForRaspberryPiZerow2

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  cmakegitbash.sh
resources/: story.txt
src/: BitArray.cpp  BitArray.hpp  Pipe.cpp  Pipe.hpp  main.cpp
